--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.9.49",
     "typescript": "4.0.3"
-  }
+  },
+  "engines": {
+        "node": "10.16.0",
+        "npm": "6.9.0"
+    }
 }
