--- a/package.json
+++ b/package.json
@@ -23,12 +23,7 @@
         "tailwindcss": "1.8.10"
     },
     "scripts": {
-        "start": "node server.js",
-        "build": "react-scripts build && gulp licenses",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start",
-        "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css"
+        "start": "node server.js"
     },
     "eslintConfig": {
         "extends": "react-app"
